Failing to allocate MethodCounters and MDO causes a serious performance drop

XMLWordPrintable

    • b40
    • Not verified

        AdvancedThresholdPolicy::create_mdo uses CHECK_AND_CLEAR when creating a MethodData object. If Metaspace is full, this will result in a lot of GCs, since Metaspace will return throw an OOME everytime the interpreter tries to create a MethodData.

        Is is possible for the interpreter to notice that it could not allocate the MethodData and then don't allocate any more MethodData until the OOME can reach a JavaThread so the application can handle it?

          1. ByteCodeLoader.java
            3 kB
            Erik Helin
          2. InMemoryJavaCompiler.java
            6 kB
            Erik Helin
          3. Reproducer.java
            2 kB
            Erik Helin
          4. reproducer.sh
            0.5 kB
            Erik Helin

              Assignee:
              Coleen Phillimore
              Reporter:
              Erik Helin
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

                Created:
                Updated:
                Resolved: